--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "httpdispatcher": "^1.0.0",
     "request": "^2.74.0",
-    "typeof": "^1.0.0"
+    "typeof": "^1.0.0",
+	"robots": "robots.txt"
   },
   "devDependencies": {},
   "scripts": {
@@ -14,5 +15,5 @@
     "start": "node server.js"
   },
   "author": "Brandon Sharratt",
-  "license": "ISC"
+  "license": "CC3"
 }
