--- a/.github/workflows/latestTag.yaml
+++ b/.github/workflows/latestTag.yaml
@@ -10,10 +10,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-        with:
-          ref: $GITHUB_REF
-      - run: |
-          git tag -d latest
-          git tag latest
-          git push origin :latest
-          git push origin latest
+        # with:
+        #   ref: ${{ GITHUB_REF }}
+      # - run: |
+      #     git tag -d latest
+      #     git tag latest
+      #     git push origin :latest
+      #     git push origin latest
+
+        echo: "$GITHUB_REF"
