--- a/.github/workflows/latestTag.yaml
+++ b/.github/workflows/latestTag.yaml
@@ -12,6 +12,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - run: |
+          git pull
           git checkout ${GITHUB_REF#refs/*/}
           git tag -d latest
           git tag latest
