--- a/.github/workflows/latestTag.yaml
+++ b/.github/workflows/latestTag.yaml
@@ -10,10 +10,14 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+        with:
+          ref: ${{ GITHUB_REF#refs/*/ }}
 
       - run: |
-          git pull
-          git checkout ${GITHUB_REF#refs/*/}
+          git fetch --unshallow --tags
+
+          git tag --list
+
           git tag -d latest
           git tag latest
           git push origin :latest
